--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,11 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}",
+            "program": "${workspaceFolder}/cmd",
             "args": [
-                "-v",
+                // "version",
+                "-c",
+                "/Users/serialt/Desktop/imau/github/cli/config.yaml",
             ]
         }
     ]
